// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`darkMinimal builds the same chrome 1`] = `
{
  "appBarColorOnDark": true,
  "mode": "dark",
  "primary": "#616161",
}
`;

exports[`darkMinimal resolves the same colours 1`] = `
{
  "action": {
    "activatedOpacity": 0.24,
    "active": "#fff",
    "disabled": "rgba(255, 255, 255, 0.3)",
    "disabledBackground": "rgba(255, 255, 255, 0.12)",
    "disabledOpacity": 0.38,
    "focus": "rgba(255, 255, 255, 0.12)",
    "focusOpacity": 0.12,
    "hover": "rgba(255, 255, 255, 0.08)",
    "hoverOpacity": 0.08,
    "selected": "rgba(255, 255, 255, 0.16)",
    "selectedOpacity": 0.16,
  },
  "alignmentFill": {
    "pairLL": "#4d9a4d",
    "pairLR": "#b0b0b0",
    "pairRL": "#0099bb",
    "pairRR": "#5555bb",
    "unmappedMate": "#4a4a4a",
  },
  "background": {
    "default": "#121212",
    "paper": "#121212",
  },
  "bases": {
    "A": {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "#388e3c",
      "light": "#81c784",
      "main": "#4caf50",
    },
    "C": {
      "contrastText": "#fff",
      "dark": "#1976d2",
      "light": "#64b5f6",
      "main": "#2196f3",
    },
    "G": {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "#f57c00",
      "light": "#ffb74d",
      "main": "#ff9800",
    },
    "N": {
      "contrastText": "#fff",
      "dark": "#5d4037",
      "light": "#a1887f",
      "main": "#795548",
    },
    "T": {
      "contrastText": "#fff",
      "dark": "#d32f2f",
      "light": "#e57373",
      "main": "#f44336",
    },
  },
  "codonNonsynonymous": "#e8930c",
  "codonStop": "#cc2222",
  "codonSynonymous": "#3a7bd5",
  "common": {
    "black": "#000",
    "white": "#fff",
  },
  "coverage": "#cccccc",
  "deletion": "#5c5c5c",
  "divider": "rgba(255, 255, 255, 0.12)",
  "error": {
    "contrastText": "#fff",
    "dark": "#d32f2f",
    "light": "#e57373",
    "main": "#f44336",
  },
  "featureConnector": "rgba(255, 255, 255, 0.9)",
  "featureDescription": "#64b5f6",
  "featureHover": "rgba(255,255,255,0.25)",
  "featureHoverStrong": "rgba(255,255,255,0.4)",
  "featureSelected": "rgba(120,180,255,0.9)",
  "frames": [
    null,
    {
      "contrastText": "#fff",
      "dark": "rgb(77, 77, 77)",
      "light": "rgb(139, 139, 139)",
      "main": "#6e6e6e",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(57, 57, 57)",
      "light": "rgb(116, 116, 116)",
      "main": "#525252",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(33, 33, 33)",
      "light": "rgb(89, 89, 89)",
      "main": "#303030",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(33, 33, 33)",
      "light": "rgb(89, 89, 89)",
      "main": "#303030",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(57, 57, 57)",
      "light": "rgb(116, 116, 116)",
      "main": "#525252",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(77, 77, 77)",
      "light": "rgb(139, 139, 139)",
      "main": "#6e6e6e",
    },
  ],
  "framesCDS": [
    null,
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(178, 89, 89)",
      "light": "rgb(255, 153, 153)",
      "main": "#FF8080",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(89, 178, 89)",
      "light": "rgb(153, 255, 153)",
      "main": "#80FF80",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(89, 89, 178)",
      "light": "rgb(153, 153, 255)",
      "main": "#8080FF",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(89, 89, 178)",
      "light": "rgb(153, 153, 255)",
      "main": "#8080FF",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(89, 178, 89)",
      "light": "rgb(153, 255, 153)",
      "main": "#80FF80",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(178, 89, 89)",
      "light": "rgb(255, 153, 153)",
      "main": "#FF8080",
    },
  ],
  "grey": {
    "100": "#f5f5f5",
    "200": "#eeeeee",
    "300": "#e0e0e0",
    "400": "#bdbdbd",
    "50": "#fafafa",
    "500": "#9e9e9e",
    "600": "#757575",
    "700": "#616161",
    "800": "#424242",
    "900": "#212121",
  },
  "gridlineMajor": "rgba(255,255,255,0.15)",
  "gridlineMinor": "rgba(255,255,255,0.06)",
  "hardclip": "#f00",
  "highlight": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 123, 20)",
    "light": "rgb(255, 192, 74)",
    "main": "#FFB11D",
  },
  "info": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "#0288d1",
    "light": "#4fc3f7",
    "main": "#29b6f6",
  },
  "insertion": "#800080",
  "mafGap": "#c8c8c8",
  "missingData": "#ffffcc",
  "mode": "dark",
  "modificationFwd": "#c8c8c8",
  "modificationRev": "#c8dcc8",
  "mutedSnpBase": "#888",
  "plotGridlineMajor": "rgba(255,255,255,0.1)",
  "plotGridlineMinor": "rgba(255,255,255,0.05)",
  "primary": {
    "contrastText": "#fff",
    "dark": "rgb(67, 67, 67)",
    "light": "rgb(128, 128, 128)",
    "main": "#616161",
  },
  "quaternary": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 123, 20)",
    "light": "rgb(255, 192, 74)",
    "main": "#FFB11D",
  },
  "readOverlap": "#e4e4e4",
  "regionBoundary": "rgba(255,255,255,0.3)",
  "regionSeparator": "#9e9e9e",
  "secondary": {
    "contrastText": "#fff",
    "dark": "rgb(46, 46, 46)",
    "light": "rgb(103, 103, 103)",
    "main": "#424242",
  },
  "skip": "#009a8a",
  "softclip": "#00f",
  "startCodon": "#3e3",
  "stopCodon": "#e22",
  "success": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "#388e3c",
    "light": "#81c784",
    "main": "#66bb6a",
  },
  "tableBorder": "#515151",
  "tertiary": {
    "contrastText": "#fff",
    "dark": "rgb(23, 23, 23)",
    "light": "rgb(77, 77, 77)",
    "main": "#212121",
  },
  "text": {
    "disabled": "rgba(255, 255, 255, 0.5)",
    "primary": "#fff",
    "secondary": "rgba(255, 255, 255, 0.7)",
  },
  "textHighlight": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 156, 71)",
    "light": "rgb(255, 230, 132)",
    "main": "#ffe066",
  },
  "warning": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "#f57c00",
    "light": "#ffb74d",
    "main": "#ffa726",
  },
}
`;

exports[`darkStock builds the same chrome 1`] = `
{
  "appBarColorOnDark": true,
  "mode": "dark",
  "primary": "#0D233F",
}
`;

exports[`darkStock resolves the same colours 1`] = `
{
  "action": {
    "activatedOpacity": 0.24,
    "active": "#fff",
    "disabled": "rgba(255, 255, 255, 0.3)",
    "disabledBackground": "rgba(255, 255, 255, 0.12)",
    "disabledOpacity": 0.38,
    "focus": "rgba(255, 255, 255, 0.12)",
    "focusOpacity": 0.12,
    "hover": "rgba(255, 255, 255, 0.08)",
    "hoverOpacity": 0.08,
    "selected": "rgba(255, 255, 255, 0.16)",
    "selectedOpacity": 0.16,
  },
  "alignmentFill": {
    "pairLL": "#4d9a4d",
    "pairLR": "#b0b0b0",
    "pairRL": "#0099bb",
    "pairRR": "#5555bb",
    "unmappedMate": "#4a4a4a",
  },
  "background": {
    "default": "#121212",
    "paper": "#121212",
  },
  "bases": {
    "A": {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "#388e3c",
      "light": "#81c784",
      "main": "#4caf50",
    },
    "C": {
      "contrastText": "#fff",
      "dark": "#1976d2",
      "light": "#64b5f6",
      "main": "#2196f3",
    },
    "G": {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "#f57c00",
      "light": "#ffb74d",
      "main": "#ff9800",
    },
    "N": {
      "contrastText": "#fff",
      "dark": "#5d4037",
      "light": "#a1887f",
      "main": "#795548",
    },
    "T": {
      "contrastText": "#fff",
      "dark": "#d32f2f",
      "light": "#e57373",
      "main": "#f44336",
    },
  },
  "codonNonsynonymous": "#e8930c",
  "codonStop": "#cc2222",
  "codonSynonymous": "#3a7bd5",
  "common": {
    "black": "#000",
    "white": "#fff",
  },
  "coverage": "#cccccc",
  "deletion": "#5c5c5c",
  "divider": "rgba(255, 255, 255, 0.12)",
  "error": {
    "contrastText": "#fff",
    "dark": "#d32f2f",
    "light": "#e57373",
    "main": "#f44336",
  },
  "featureConnector": "rgba(255, 255, 255, 0.9)",
  "featureDescription": "#64b5f6",
  "featureHover": "rgba(255,255,255,0.25)",
  "featureHoverStrong": "rgba(255,255,255,0.4)",
  "featureSelected": "rgba(120,180,255,0.9)",
  "frames": [
    null,
    {
      "contrastText": "#fff",
      "dark": "rgb(77, 77, 77)",
      "light": "rgb(139, 139, 139)",
      "main": "#6e6e6e",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(57, 57, 57)",
      "light": "rgb(116, 116, 116)",
      "main": "#525252",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(33, 33, 33)",
      "light": "rgb(89, 89, 89)",
      "main": "#303030",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(33, 33, 33)",
      "light": "rgb(89, 89, 89)",
      "main": "#303030",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(57, 57, 57)",
      "light": "rgb(116, 116, 116)",
      "main": "#525252",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(77, 77, 77)",
      "light": "rgb(139, 139, 139)",
      "main": "#6e6e6e",
    },
  ],
  "framesCDS": [
    null,
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(178, 89, 89)",
      "light": "rgb(255, 153, 153)",
      "main": "#FF8080",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(89, 178, 89)",
      "light": "rgb(153, 255, 153)",
      "main": "#80FF80",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(89, 89, 178)",
      "light": "rgb(153, 153, 255)",
      "main": "#8080FF",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(89, 89, 178)",
      "light": "rgb(153, 153, 255)",
      "main": "#8080FF",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(89, 178, 89)",
      "light": "rgb(153, 255, 153)",
      "main": "#80FF80",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(178, 89, 89)",
      "light": "rgb(255, 153, 153)",
      "main": "#FF8080",
    },
  ],
  "grey": {
    "100": "#f5f5f5",
    "200": "#eeeeee",
    "300": "#e0e0e0",
    "400": "#bdbdbd",
    "50": "#fafafa",
    "500": "#9e9e9e",
    "600": "#757575",
    "700": "#616161",
    "800": "#424242",
    "900": "#212121",
  },
  "gridlineMajor": "rgba(255,255,255,0.15)",
  "gridlineMinor": "rgba(255,255,255,0.06)",
  "hardclip": "#f00",
  "highlight": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 123, 20)",
    "light": "rgb(255, 192, 74)",
    "main": "#FFB11D",
  },
  "info": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "#0288d1",
    "light": "#4fc3f7",
    "main": "#29b6f6",
  },
  "insertion": "#800080",
  "mafGap": "#c8c8c8",
  "missingData": "#ffffcc",
  "mode": "dark",
  "modificationFwd": "#c8c8c8",
  "modificationRev": "#c8dcc8",
  "mutedSnpBase": "#888",
  "plotGridlineMajor": "rgba(255,255,255,0.1)",
  "plotGridlineMinor": "rgba(255,255,255,0.05)",
  "primary": {
    "contrastText": "#fff",
    "dark": "rgb(9, 24, 44)",
    "light": "rgb(61, 79, 101)",
    "main": "#0D233F",
  },
  "quaternary": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 123, 20)",
    "light": "rgb(255, 192, 74)",
    "main": "#FFB11D",
  },
  "readOverlap": "#e4e4e4",
  "regionBoundary": "rgba(255,255,255,0.3)",
  "regionSeparator": "#9e9e9e",
  "secondary": {
    "contrastText": "#fff",
    "dark": "rgb(79, 21, 69)",
    "light": "rgb(142, 75, 130)",
    "main": "#721E63",
  },
  "skip": "#009a8a",
  "softclip": "#00f",
  "startCodon": "#3e3",
  "stopCodon": "#e22",
  "success": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "#388e3c",
    "light": "#81c784",
    "main": "#66bb6a",
  },
  "tableBorder": "#515151",
  "tertiary": {
    "contrastText": "#fff",
    "dark": "rgb(13, 59, 67)",
    "light": "rgb(66, 119, 127)",
    "main": "#135560",
  },
  "text": {
    "disabled": "rgba(255, 255, 255, 0.5)",
    "primary": "#fff",
    "secondary": "rgba(255, 255, 255, 0.7)",
  },
  "textHighlight": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 156, 71)",
    "light": "rgb(255, 230, 132)",
    "main": "#ffe066",
  },
  "warning": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "#f57c00",
    "light": "#ffb74d",
    "main": "#ffa726",
  },
}
`;

exports[`default + a bare mode resolves the same colours 1`] = `
{
  "action": {
    "activatedOpacity": 0.24,
    "active": "#fff",
    "disabled": "rgba(255, 255, 255, 0.3)",
    "disabledBackground": "rgba(255, 255, 255, 0.12)",
    "disabledOpacity": 0.38,
    "focus": "rgba(255, 255, 255, 0.12)",
    "focusOpacity": 0.12,
    "hover": "rgba(255, 255, 255, 0.08)",
    "hoverOpacity": 0.08,
    "selected": "rgba(255, 255, 255, 0.16)",
    "selectedOpacity": 0.16,
  },
  "alignmentFill": {
    "pairLL": "#4d9a4d",
    "pairLR": "#b0b0b0",
    "pairRL": "#0099bb",
    "pairRR": "#5555bb",
    "unmappedMate": "#4a4a4a",
  },
  "background": {
    "default": "#121212",
    "paper": "#121212",
  },
  "bases": {
    "A": {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "#388e3c",
      "light": "#81c784",
      "main": "#4caf50",
    },
    "C": {
      "contrastText": "#fff",
      "dark": "#1976d2",
      "light": "#64b5f6",
      "main": "#2196f3",
    },
    "G": {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "#f57c00",
      "light": "#ffb74d",
      "main": "#ff9800",
    },
    "N": {
      "contrastText": "#fff",
      "dark": "#5d4037",
      "light": "#a1887f",
      "main": "#795548",
    },
    "T": {
      "contrastText": "#fff",
      "dark": "#d32f2f",
      "light": "#e57373",
      "main": "#f44336",
    },
  },
  "codonNonsynonymous": "#e8930c",
  "codonStop": "#cc2222",
  "codonSynonymous": "#3a7bd5",
  "common": {
    "black": "#000",
    "white": "#fff",
  },
  "coverage": "#cccccc",
  "deletion": "#5c5c5c",
  "divider": "rgba(255, 255, 255, 0.12)",
  "error": {
    "contrastText": "#fff",
    "dark": "#d32f2f",
    "light": "#e57373",
    "main": "#f44336",
  },
  "featureConnector": "rgba(255, 255, 255, 0.9)",
  "featureDescription": "#64b5f6",
  "featureHover": "rgba(255,255,255,0.25)",
  "featureHoverStrong": "rgba(255,255,255,0.4)",
  "featureSelected": "rgba(120,180,255,0.9)",
  "frames": [
    null,
    {
      "contrastText": "#fff",
      "dark": "rgb(77, 77, 77)",
      "light": "rgb(139, 139, 139)",
      "main": "#6e6e6e",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(57, 57, 57)",
      "light": "rgb(116, 116, 116)",
      "main": "#525252",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(33, 33, 33)",
      "light": "rgb(89, 89, 89)",
      "main": "#303030",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(33, 33, 33)",
      "light": "rgb(89, 89, 89)",
      "main": "#303030",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(57, 57, 57)",
      "light": "rgb(116, 116, 116)",
      "main": "#525252",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(77, 77, 77)",
      "light": "rgb(139, 139, 139)",
      "main": "#6e6e6e",
    },
  ],
  "framesCDS": [
    null,
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(178, 89, 89)",
      "light": "rgb(255, 153, 153)",
      "main": "#FF8080",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(89, 178, 89)",
      "light": "rgb(153, 255, 153)",
      "main": "#80FF80",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(89, 89, 178)",
      "light": "rgb(153, 153, 255)",
      "main": "#8080FF",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(89, 89, 178)",
      "light": "rgb(153, 153, 255)",
      "main": "#8080FF",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(89, 178, 89)",
      "light": "rgb(153, 255, 153)",
      "main": "#80FF80",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(178, 89, 89)",
      "light": "rgb(255, 153, 153)",
      "main": "#FF8080",
    },
  ],
  "grey": {
    "100": "#f5f5f5",
    "200": "#eeeeee",
    "300": "#e0e0e0",
    "400": "#bdbdbd",
    "50": "#fafafa",
    "500": "#9e9e9e",
    "600": "#757575",
    "700": "#616161",
    "800": "#424242",
    "900": "#212121",
  },
  "gridlineMajor": "rgba(255,255,255,0.15)",
  "gridlineMinor": "rgba(255,255,255,0.06)",
  "hardclip": "#f00",
  "highlight": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 123, 20)",
    "light": "rgb(255, 192, 74)",
    "main": "#FFB11D",
  },
  "info": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "#0288d1",
    "light": "#4fc3f7",
    "main": "#29b6f6",
  },
  "insertion": "#800080",
  "mafGap": "#c8c8c8",
  "missingData": "#ffffcc",
  "mode": "dark",
  "modificationFwd": "#c8c8c8",
  "modificationRev": "#c8dcc8",
  "mutedSnpBase": "#888",
  "plotGridlineMajor": "rgba(255,255,255,0.1)",
  "plotGridlineMinor": "rgba(255,255,255,0.05)",
  "primary": {
    "contrastText": "#fff",
    "dark": "rgb(9, 24, 44)",
    "light": "rgb(61, 79, 101)",
    "main": "#0D233F",
  },
  "quaternary": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 123, 20)",
    "light": "rgb(255, 192, 74)",
    "main": "#FFB11D",
  },
  "readOverlap": "#e4e4e4",
  "regionBoundary": "rgba(255,255,255,0.3)",
  "regionSeparator": "#9e9e9e",
  "secondary": {
    "contrastText": "#fff",
    "dark": "rgb(79, 21, 69)",
    "light": "rgb(142, 75, 130)",
    "main": "#721E63",
  },
  "skip": "#009a8a",
  "softclip": "#00f",
  "startCodon": "#3e3",
  "stopCodon": "#e22",
  "success": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "#388e3c",
    "light": "#81c784",
    "main": "#66bb6a",
  },
  "tableBorder": "#515151",
  "tertiary": {
    "contrastText": "#fff",
    "dark": "rgb(13, 59, 67)",
    "light": "rgb(66, 119, 127)",
    "main": "#135560",
  },
  "text": {
    "disabled": "rgba(255, 255, 255, 0.5)",
    "primary": "#fff",
    "secondary": "rgba(255, 255, 255, 0.7)",
  },
  "textHighlight": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 156, 71)",
    "light": "rgb(255, 230, 132)",
    "main": "#ffe066",
  },
  "warning": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "#f57c00",
    "light": "#ffb74d",
    "main": "#ffa726",
  },
}
`;

exports[`default + a config background resolves the same colours 1`] = `
{
  "action": {
    "activatedOpacity": 0.12,
    "active": "rgba(0, 0, 0, 0.54)",
    "disabled": "rgba(0, 0, 0, 0.26)",
    "disabledBackground": "rgba(0, 0, 0, 0.12)",
    "disabledOpacity": 0.38,
    "focus": "rgba(0, 0, 0, 0.12)",
    "focusOpacity": 0.12,
    "hover": "rgba(0, 0, 0, 0.04)",
    "hoverOpacity": 0.04,
    "selected": "rgba(0, 0, 0, 0.08)",
    "selectedOpacity": 0.08,
  },
  "alignmentFill": {
    "pairLL": "#4d9a4d",
    "pairLR": "#d3d3d3",
    "pairRL": "#0099bb",
    "pairRR": "#5555bb",
    "unmappedMate": "#000000",
  },
  "background": {
    "default": "#fff",
    "paper": "#fafafa",
  },
  "bases": {
    "A": {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "#388e3c",
      "light": "#81c784",
      "main": "#4caf50",
    },
    "C": {
      "contrastText": "#fff",
      "dark": "#1976d2",
      "light": "#64b5f6",
      "main": "#2196f3",
    },
    "G": {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "#f57c00",
      "light": "#ffb74d",
      "main": "#ff9800",
    },
    "N": {
      "contrastText": "#fff",
      "dark": "#5d4037",
      "light": "#a1887f",
      "main": "#795548",
    },
    "T": {
      "contrastText": "#fff",
      "dark": "#d32f2f",
      "light": "#e57373",
      "main": "#f44336",
    },
  },
  "codonNonsynonymous": "#e8930c",
  "codonStop": "#cc2222",
  "codonSynonymous": "#3a7bd5",
  "common": {
    "black": "#000",
    "white": "#fff",
  },
  "coverage": "#bdbdbd",
  "deletion": "#808080",
  "divider": "rgba(0, 0, 0, 0.12)",
  "error": {
    "contrastText": "#fff",
    "dark": "#c62828",
    "light": "#ef5350",
    "main": "#d32f2f",
  },
  "featureConnector": "rgba(0, 0, 0, 0.6)",
  "featureDescription": "blue",
  "featureHover": "rgba(0,0,0,0.15)",
  "featureHoverStrong": "rgba(0,0,0,0.4)",
  "featureSelected": "rgba(0,100,255,0.8)",
  "frames": [
    null,
    {
      "contrastText": "#fff",
      "dark": "rgb(100, 100, 100)",
      "light": "rgb(165, 165, 165)",
      "main": "#8f8f8f",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(121, 121, 121)",
      "light": "rgb(189, 189, 189)",
      "main": "#adadad",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(151, 151, 151)",
      "light": "rgb(223, 223, 223)",
      "main": "#d8d8d8",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(151, 151, 151)",
      "light": "rgb(223, 223, 223)",
      "main": "#d8d8d8",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(121, 121, 121)",
      "light": "rgb(189, 189, 189)",
      "main": "#adadad",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(100, 100, 100)",
      "light": "rgb(165, 165, 165)",
      "main": "#8f8f8f",
    },
  ],
  "framesCDS": [
    null,
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(178, 89, 89)",
      "light": "rgb(255, 153, 153)",
      "main": "#FF8080",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(89, 178, 89)",
      "light": "rgb(153, 255, 153)",
      "main": "#80FF80",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(89, 89, 178)",
      "light": "rgb(153, 153, 255)",
      "main": "#8080FF",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(89, 89, 178)",
      "light": "rgb(153, 153, 255)",
      "main": "#8080FF",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(89, 178, 89)",
      "light": "rgb(153, 255, 153)",
      "main": "#80FF80",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(178, 89, 89)",
      "light": "rgb(255, 153, 153)",
      "main": "#FF8080",
    },
  ],
  "grey": {
    "100": "#f5f5f5",
    "200": "#eeeeee",
    "300": "#e0e0e0",
    "400": "#bdbdbd",
    "50": "#fafafa",
    "500": "#9e9e9e",
    "600": "#757575",
    "700": "#616161",
    "800": "#424242",
    "900": "#212121",
  },
  "gridlineMajor": "rgba(0,0,0,0.26)",
  "gridlineMinor": "rgba(0,0,0,0.12)",
  "hardclip": "#f00",
  "highlight": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 123, 20)",
    "light": "rgb(255, 192, 74)",
    "main": "#FFB11D",
  },
  "info": {
    "contrastText": "#fff",
    "dark": "#01579b",
    "light": "#03a9f4",
    "main": "#0288d1",
  },
  "insertion": "#800080",
  "mafGap": "#808080",
  "missingData": "#ffffcc",
  "mode": "light",
  "modificationFwd": "#c8c8c8",
  "modificationRev": "#c8dcc8",
  "mutedSnpBase": "#888",
  "plotGridlineMajor": "rgba(0,0,0,0.13)",
  "plotGridlineMinor": "rgba(0,0,0,0.06)",
  "primary": {
    "contrastText": "#fff",
    "dark": "rgb(9, 24, 44)",
    "light": "rgb(61, 79, 101)",
    "main": "#0D233F",
  },
  "quaternary": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 123, 20)",
    "light": "rgb(255, 192, 74)",
    "main": "#FFB11D",
  },
  "readOverlap": "#555555",
  "regionBoundary": "rgba(0,0,0,0.42)",
  "regionSeparator": "#757575",
  "secondary": {
    "contrastText": "#fff",
    "dark": "rgb(79, 21, 69)",
    "light": "rgb(142, 75, 130)",
    "main": "#721E63",
  },
  "skip": "#009a8a",
  "softclip": "#00f",
  "startCodon": "#3e3",
  "stopCodon": "#e22",
  "success": {
    "contrastText": "#fff",
    "dark": "#1b5e20",
    "light": "#4caf50",
    "main": "#2e7d32",
  },
  "tableBorder": "#e0e0e0",
  "tertiary": {
    "contrastText": "#fff",
    "dark": "rgb(13, 59, 67)",
    "light": "rgb(66, 119, 127)",
    "main": "#135560",
  },
  "text": {
    "disabled": "rgba(0, 0, 0, 0.38)",
    "primary": "rgba(0, 0, 0, 0.87)",
    "secondary": "rgba(0, 0, 0, 0.6)",
  },
  "textHighlight": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 156, 71)",
    "light": "rgb(255, 230, 132)",
    "main": "#ffe066",
  },
  "warning": {
    "contrastText": "#fff",
    "dark": "#e65100",
    "light": "#ff9800",
    "main": "#ed6c02",
  },
}
`;

exports[`default + a config brand resolves the same colours 1`] = `
{
  "action": {
    "activatedOpacity": 0.12,
    "active": "rgba(0, 0, 0, 0.54)",
    "disabled": "rgba(0, 0, 0, 0.26)",
    "disabledBackground": "rgba(0, 0, 0, 0.12)",
    "disabledOpacity": 0.38,
    "focus": "rgba(0, 0, 0, 0.12)",
    "focusOpacity": 0.12,
    "hover": "rgba(0, 0, 0, 0.04)",
    "hoverOpacity": 0.04,
    "selected": "rgba(0, 0, 0, 0.08)",
    "selectedOpacity": 0.08,
  },
  "alignmentFill": {
    "pairLL": "#4d9a4d",
    "pairLR": "#d3d3d3",
    "pairRL": "#0099bb",
    "pairRR": "#5555bb",
    "unmappedMate": "#000000",
  },
  "background": {
    "default": "#fff",
    "paper": "#fff",
  },
  "bases": {
    "A": {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "#388e3c",
      "light": "#81c784",
      "main": "#4caf50",
    },
    "C": {
      "contrastText": "#fff",
      "dark": "#1976d2",
      "light": "#64b5f6",
      "main": "#2196f3",
    },
    "G": {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "#f57c00",
      "light": "#ffb74d",
      "main": "#ff9800",
    },
    "N": {
      "contrastText": "#fff",
      "dark": "#5d4037",
      "light": "#a1887f",
      "main": "#795548",
    },
    "T": {
      "contrastText": "#fff",
      "dark": "#d32f2f",
      "light": "#e57373",
      "main": "#f44336",
    },
  },
  "codonNonsynonymous": "#e8930c",
  "codonStop": "#cc2222",
  "codonSynonymous": "#3a7bd5",
  "common": {
    "black": "#000",
    "white": "#fff",
  },
  "coverage": "#bdbdbd",
  "deletion": "#808080",
  "divider": "rgba(0, 0, 0, 0.12)",
  "error": {
    "contrastText": "#fff",
    "dark": "#c62828",
    "light": "#ef5350",
    "main": "#d32f2f",
  },
  "featureConnector": "rgba(0, 0, 0, 0.6)",
  "featureDescription": "blue",
  "featureHover": "rgba(0,0,0,0.15)",
  "featureHoverStrong": "rgba(0,0,0,0.4)",
  "featureSelected": "rgba(0,100,255,0.8)",
  "frames": [
    null,
    {
      "contrastText": "#fff",
      "dark": "rgb(100, 100, 100)",
      "light": "rgb(165, 165, 165)",
      "main": "#8f8f8f",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(121, 121, 121)",
      "light": "rgb(189, 189, 189)",
      "main": "#adadad",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(151, 151, 151)",
      "light": "rgb(223, 223, 223)",
      "main": "#d8d8d8",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(151, 151, 151)",
      "light": "rgb(223, 223, 223)",
      "main": "#d8d8d8",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(121, 121, 121)",
      "light": "rgb(189, 189, 189)",
      "main": "#adadad",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(100, 100, 100)",
      "light": "rgb(165, 165, 165)",
      "main": "#8f8f8f",
    },
  ],
  "framesCDS": [
    null,
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(178, 89, 89)",
      "light": "rgb(255, 153, 153)",
      "main": "#FF8080",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(89, 178, 89)",
      "light": "rgb(153, 255, 153)",
      "main": "#80FF80",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(89, 89, 178)",
      "light": "rgb(153, 153, 255)",
      "main": "#8080FF",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(89, 89, 178)",
      "light": "rgb(153, 153, 255)",
      "main": "#8080FF",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(89, 178, 89)",
      "light": "rgb(153, 255, 153)",
      "main": "#80FF80",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(178, 89, 89)",
      "light": "rgb(255, 153, 153)",
      "main": "#FF8080",
    },
  ],
  "grey": {
    "100": "#f5f5f5",
    "200": "#eeeeee",
    "300": "#e0e0e0",
    "400": "#bdbdbd",
    "50": "#fafafa",
    "500": "#9e9e9e",
    "600": "#757575",
    "700": "#616161",
    "800": "#424242",
    "900": "#212121",
  },
  "gridlineMajor": "rgba(0,0,0,0.26)",
  "gridlineMinor": "rgba(0,0,0,0.12)",
  "hardclip": "#f00",
  "highlight": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 123, 20)",
    "light": "rgb(255, 192, 74)",
    "main": "#FFB11D",
  },
  "info": {
    "contrastText": "#fff",
    "dark": "#01579b",
    "light": "#03a9f4",
    "main": "#0288d1",
  },
  "insertion": "#800080",
  "mafGap": "#808080",
  "missingData": "#ffffcc",
  "mode": "light",
  "modificationFwd": "#c8c8c8",
  "modificationRev": "#c8dcc8",
  "mutedSnpBase": "#888",
  "plotGridlineMajor": "rgba(0,0,0,0.13)",
  "plotGridlineMinor": "rgba(0,0,0,0.06)",
  "primary": {
    "contrastText": "#fff",
    "dark": "rgb(97, 0, 0)",
    "light": "rgb(162, 51, 51)",
    "main": "#8b0000",
  },
  "quaternary": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 123, 20)",
    "light": "rgb(255, 192, 74)",
    "main": "#FFB11D",
  },
  "readOverlap": "#555555",
  "regionBoundary": "rgba(0,0,0,0.42)",
  "regionSeparator": "#757575",
  "secondary": {
    "contrastText": "#fff",
    "dark": "rgb(79, 21, 69)",
    "light": "rgb(142, 75, 130)",
    "main": "#721E63",
  },
  "skip": "#009a8a",
  "softclip": "#00f",
  "startCodon": "#3e3",
  "stopCodon": "#e22",
  "success": {
    "contrastText": "#fff",
    "dark": "#1b5e20",
    "light": "#4caf50",
    "main": "#2e7d32",
  },
  "tableBorder": "#e0e0e0",
  "tertiary": {
    "contrastText": "#fff",
    "dark": "rgb(13, 59, 67)",
    "light": "rgb(66, 119, 127)",
    "main": "#135560",
  },
  "text": {
    "disabled": "rgba(0, 0, 0, 0.38)",
    "primary": "rgba(0, 0, 0, 0.87)",
    "secondary": "rgba(0, 0, 0, 0.6)",
  },
  "textHighlight": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 156, 71)",
    "light": "rgb(255, 230, 132)",
    "main": "#ffe066",
  },
  "warning": {
    "contrastText": "#fff",
    "dark": "#e65100",
    "light": "#ff9800",
    "main": "#ed6c02",
  },
}
`;

exports[`default + a config brand, dark resolves the same colours 1`] = `
{
  "action": {
    "activatedOpacity": 0.24,
    "active": "#fff",
    "disabled": "rgba(255, 255, 255, 0.3)",
    "disabledBackground": "rgba(255, 255, 255, 0.12)",
    "disabledOpacity": 0.38,
    "focus": "rgba(255, 255, 255, 0.12)",
    "focusOpacity": 0.12,
    "hover": "rgba(255, 255, 255, 0.08)",
    "hoverOpacity": 0.08,
    "selected": "rgba(255, 255, 255, 0.16)",
    "selectedOpacity": 0.16,
  },
  "alignmentFill": {
    "pairLL": "#4d9a4d",
    "pairLR": "#b0b0b0",
    "pairRL": "#0099bb",
    "pairRR": "#5555bb",
    "unmappedMate": "#4a4a4a",
  },
  "background": {
    "default": "#121212",
    "paper": "#121212",
  },
  "bases": {
    "A": {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "#388e3c",
      "light": "#81c784",
      "main": "#4caf50",
    },
    "C": {
      "contrastText": "#fff",
      "dark": "#1976d2",
      "light": "#64b5f6",
      "main": "#2196f3",
    },
    "G": {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "#f57c00",
      "light": "#ffb74d",
      "main": "#ff9800",
    },
    "N": {
      "contrastText": "#fff",
      "dark": "#5d4037",
      "light": "#a1887f",
      "main": "#795548",
    },
    "T": {
      "contrastText": "#fff",
      "dark": "#d32f2f",
      "light": "#e57373",
      "main": "#f44336",
    },
  },
  "codonNonsynonymous": "#e8930c",
  "codonStop": "#cc2222",
  "codonSynonymous": "#3a7bd5",
  "common": {
    "black": "#000",
    "white": "#fff",
  },
  "coverage": "#cccccc",
  "deletion": "#5c5c5c",
  "divider": "rgba(255, 255, 255, 0.12)",
  "error": {
    "contrastText": "#fff",
    "dark": "#d32f2f",
    "light": "#e57373",
    "main": "#f44336",
  },
  "featureConnector": "rgba(255, 255, 255, 0.9)",
  "featureDescription": "#64b5f6",
  "featureHover": "rgba(255,255,255,0.25)",
  "featureHoverStrong": "rgba(255,255,255,0.4)",
  "featureSelected": "rgba(120,180,255,0.9)",
  "frames": [
    null,
    {
      "contrastText": "#fff",
      "dark": "rgb(77, 77, 77)",
      "light": "rgb(139, 139, 139)",
      "main": "#6e6e6e",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(57, 57, 57)",
      "light": "rgb(116, 116, 116)",
      "main": "#525252",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(33, 33, 33)",
      "light": "rgb(89, 89, 89)",
      "main": "#303030",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(33, 33, 33)",
      "light": "rgb(89, 89, 89)",
      "main": "#303030",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(57, 57, 57)",
      "light": "rgb(116, 116, 116)",
      "main": "#525252",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(77, 77, 77)",
      "light": "rgb(139, 139, 139)",
      "main": "#6e6e6e",
    },
  ],
  "framesCDS": [
    null,
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(178, 89, 89)",
      "light": "rgb(255, 153, 153)",
      "main": "#FF8080",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(89, 178, 89)",
      "light": "rgb(153, 255, 153)",
      "main": "#80FF80",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(89, 89, 178)",
      "light": "rgb(153, 153, 255)",
      "main": "#8080FF",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(89, 89, 178)",
      "light": "rgb(153, 153, 255)",
      "main": "#8080FF",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(89, 178, 89)",
      "light": "rgb(153, 255, 153)",
      "main": "#80FF80",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(178, 89, 89)",
      "light": "rgb(255, 153, 153)",
      "main": "#FF8080",
    },
  ],
  "grey": {
    "100": "#f5f5f5",
    "200": "#eeeeee",
    "300": "#e0e0e0",
    "400": "#bdbdbd",
    "50": "#fafafa",
    "500": "#9e9e9e",
    "600": "#757575",
    "700": "#616161",
    "800": "#424242",
    "900": "#212121",
  },
  "gridlineMajor": "rgba(255,255,255,0.15)",
  "gridlineMinor": "rgba(255,255,255,0.06)",
  "hardclip": "#f00",
  "highlight": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 123, 20)",
    "light": "rgb(255, 192, 74)",
    "main": "#FFB11D",
  },
  "info": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "#0288d1",
    "light": "#4fc3f7",
    "main": "#29b6f6",
  },
  "insertion": "#800080",
  "mafGap": "#c8c8c8",
  "missingData": "#ffffcc",
  "mode": "dark",
  "modificationFwd": "#c8c8c8",
  "modificationRev": "#c8dcc8",
  "mutedSnpBase": "#888",
  "plotGridlineMajor": "rgba(255,255,255,0.1)",
  "plotGridlineMinor": "rgba(255,255,255,0.05)",
  "primary": {
    "contrastText": "#fff",
    "dark": "rgb(97, 0, 0)",
    "light": "rgb(162, 51, 51)",
    "main": "#8b0000",
  },
  "quaternary": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 123, 20)",
    "light": "rgb(255, 192, 74)",
    "main": "#FFB11D",
  },
  "readOverlap": "#e4e4e4",
  "regionBoundary": "rgba(255,255,255,0.3)",
  "regionSeparator": "#9e9e9e",
  "secondary": {
    "contrastText": "#fff",
    "dark": "rgb(79, 21, 69)",
    "light": "rgb(142, 75, 130)",
    "main": "#721E63",
  },
  "skip": "#009a8a",
  "softclip": "#00f",
  "startCodon": "#3e3",
  "stopCodon": "#e22",
  "success": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "#388e3c",
    "light": "#81c784",
    "main": "#66bb6a",
  },
  "tableBorder": "#515151",
  "tertiary": {
    "contrastText": "#fff",
    "dark": "rgb(13, 59, 67)",
    "light": "rgb(66, 119, 127)",
    "main": "#135560",
  },
  "text": {
    "disabled": "rgba(255, 255, 255, 0.5)",
    "primary": "#fff",
    "secondary": "rgba(255, 255, 255, 0.7)",
  },
  "textHighlight": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 156, 71)",
    "light": "rgb(255, 230, 132)",
    "main": "#ffe066",
  },
  "warning": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "#f57c00",
    "light": "#ffb74d",
    "main": "#ffa726",
  },
}
`;

exports[`default builds the same chrome 1`] = `
{
  "appBarColorOnDark": true,
  "mode": "light",
  "primary": "#0D233F",
}
`;

exports[`default resolves the same colours 1`] = `
{
  "action": {
    "activatedOpacity": 0.12,
    "active": "rgba(0, 0, 0, 0.54)",
    "disabled": "rgba(0, 0, 0, 0.26)",
    "disabledBackground": "rgba(0, 0, 0, 0.12)",
    "disabledOpacity": 0.38,
    "focus": "rgba(0, 0, 0, 0.12)",
    "focusOpacity": 0.12,
    "hover": "rgba(0, 0, 0, 0.04)",
    "hoverOpacity": 0.04,
    "selected": "rgba(0, 0, 0, 0.08)",
    "selectedOpacity": 0.08,
  },
  "alignmentFill": {
    "pairLL": "#4d9a4d",
    "pairLR": "#d3d3d3",
    "pairRL": "#0099bb",
    "pairRR": "#5555bb",
    "unmappedMate": "#000000",
  },
  "background": {
    "default": "#fff",
    "paper": "#fff",
  },
  "bases": {
    "A": {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "#388e3c",
      "light": "#81c784",
      "main": "#4caf50",
    },
    "C": {
      "contrastText": "#fff",
      "dark": "#1976d2",
      "light": "#64b5f6",
      "main": "#2196f3",
    },
    "G": {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "#f57c00",
      "light": "#ffb74d",
      "main": "#ff9800",
    },
    "N": {
      "contrastText": "#fff",
      "dark": "#5d4037",
      "light": "#a1887f",
      "main": "#795548",
    },
    "T": {
      "contrastText": "#fff",
      "dark": "#d32f2f",
      "light": "#e57373",
      "main": "#f44336",
    },
  },
  "codonNonsynonymous": "#e8930c",
  "codonStop": "#cc2222",
  "codonSynonymous": "#3a7bd5",
  "common": {
    "black": "#000",
    "white": "#fff",
  },
  "coverage": "#bdbdbd",
  "deletion": "#808080",
  "divider": "rgba(0, 0, 0, 0.12)",
  "error": {
    "contrastText": "#fff",
    "dark": "#c62828",
    "light": "#ef5350",
    "main": "#d32f2f",
  },
  "featureConnector": "rgba(0, 0, 0, 0.6)",
  "featureDescription": "blue",
  "featureHover": "rgba(0,0,0,0.15)",
  "featureHoverStrong": "rgba(0,0,0,0.4)",
  "featureSelected": "rgba(0,100,255,0.8)",
  "frames": [
    null,
    {
      "contrastText": "#fff",
      "dark": "rgb(100, 100, 100)",
      "light": "rgb(165, 165, 165)",
      "main": "#8f8f8f",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(121, 121, 121)",
      "light": "rgb(189, 189, 189)",
      "main": "#adadad",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(151, 151, 151)",
      "light": "rgb(223, 223, 223)",
      "main": "#d8d8d8",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(151, 151, 151)",
      "light": "rgb(223, 223, 223)",
      "main": "#d8d8d8",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(121, 121, 121)",
      "light": "rgb(189, 189, 189)",
      "main": "#adadad",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(100, 100, 100)",
      "light": "rgb(165, 165, 165)",
      "main": "#8f8f8f",
    },
  ],
  "framesCDS": [
    null,
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(178, 89, 89)",
      "light": "rgb(255, 153, 153)",
      "main": "#FF8080",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(89, 178, 89)",
      "light": "rgb(153, 255, 153)",
      "main": "#80FF80",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(89, 89, 178)",
      "light": "rgb(153, 153, 255)",
      "main": "#8080FF",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(89, 89, 178)",
      "light": "rgb(153, 153, 255)",
      "main": "#8080FF",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(89, 178, 89)",
      "light": "rgb(153, 255, 153)",
      "main": "#80FF80",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(178, 89, 89)",
      "light": "rgb(255, 153, 153)",
      "main": "#FF8080",
    },
  ],
  "grey": {
    "100": "#f5f5f5",
    "200": "#eeeeee",
    "300": "#e0e0e0",
    "400": "#bdbdbd",
    "50": "#fafafa",
    "500": "#9e9e9e",
    "600": "#757575",
    "700": "#616161",
    "800": "#424242",
    "900": "#212121",
  },
  "gridlineMajor": "rgba(0,0,0,0.26)",
  "gridlineMinor": "rgba(0,0,0,0.12)",
  "hardclip": "#f00",
  "highlight": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 123, 20)",
    "light": "rgb(255, 192, 74)",
    "main": "#FFB11D",
  },
  "info": {
    "contrastText": "#fff",
    "dark": "#01579b",
    "light": "#03a9f4",
    "main": "#0288d1",
  },
  "insertion": "#800080",
  "mafGap": "#808080",
  "missingData": "#ffffcc",
  "mode": "light",
  "modificationFwd": "#c8c8c8",
  "modificationRev": "#c8dcc8",
  "mutedSnpBase": "#888",
  "plotGridlineMajor": "rgba(0,0,0,0.13)",
  "plotGridlineMinor": "rgba(0,0,0,0.06)",
  "primary": {
    "contrastText": "#fff",
    "dark": "rgb(9, 24, 44)",
    "light": "rgb(61, 79, 101)",
    "main": "#0D233F",
  },
  "quaternary": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 123, 20)",
    "light": "rgb(255, 192, 74)",
    "main": "#FFB11D",
  },
  "readOverlap": "#555555",
  "regionBoundary": "rgba(0,0,0,0.42)",
  "regionSeparator": "#757575",
  "secondary": {
    "contrastText": "#fff",
    "dark": "rgb(79, 21, 69)",
    "light": "rgb(142, 75, 130)",
    "main": "#721E63",
  },
  "skip": "#009a8a",
  "softclip": "#00f",
  "startCodon": "#3e3",
  "stopCodon": "#e22",
  "success": {
    "contrastText": "#fff",
    "dark": "#1b5e20",
    "light": "#4caf50",
    "main": "#2e7d32",
  },
  "tableBorder": "#e0e0e0",
  "tertiary": {
    "contrastText": "#fff",
    "dark": "rgb(13, 59, 67)",
    "light": "rgb(66, 119, 127)",
    "main": "#135560",
  },
  "text": {
    "disabled": "rgba(0, 0, 0, 0.38)",
    "primary": "rgba(0, 0, 0, 0.87)",
    "secondary": "rgba(0, 0, 0, 0.6)",
  },
  "textHighlight": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 156, 71)",
    "light": "rgb(255, 230, 132)",
    "main": "#ffe066",
  },
  "warning": {
    "contrastText": "#fff",
    "dark": "#e65100",
    "light": "#ff9800",
    "main": "#ed6c02",
  },
}
`;

exports[`lightMinimal builds the same chrome 1`] = `
{
  "appBarColorOnDark": true,
  "mode": "light",
  "primary": "#212121",
}
`;

exports[`lightMinimal resolves the same colours 1`] = `
{
  "action": {
    "activatedOpacity": 0.12,
    "active": "rgba(0, 0, 0, 0.54)",
    "disabled": "rgba(0, 0, 0, 0.26)",
    "disabledBackground": "rgba(0, 0, 0, 0.12)",
    "disabledOpacity": 0.38,
    "focus": "rgba(0, 0, 0, 0.12)",
    "focusOpacity": 0.12,
    "hover": "rgba(0, 0, 0, 0.04)",
    "hoverOpacity": 0.04,
    "selected": "rgba(0, 0, 0, 0.08)",
    "selectedOpacity": 0.08,
  },
  "alignmentFill": {
    "pairLL": "#4d9a4d",
    "pairLR": "#d3d3d3",
    "pairRL": "#0099bb",
    "pairRR": "#5555bb",
    "unmappedMate": "#000000",
  },
  "background": {
    "default": "#fff",
    "paper": "#fff",
  },
  "bases": {
    "A": {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "#388e3c",
      "light": "#81c784",
      "main": "#4caf50",
    },
    "C": {
      "contrastText": "#fff",
      "dark": "#1976d2",
      "light": "#64b5f6",
      "main": "#2196f3",
    },
    "G": {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "#f57c00",
      "light": "#ffb74d",
      "main": "#ff9800",
    },
    "N": {
      "contrastText": "#fff",
      "dark": "#5d4037",
      "light": "#a1887f",
      "main": "#795548",
    },
    "T": {
      "contrastText": "#fff",
      "dark": "#d32f2f",
      "light": "#e57373",
      "main": "#f44336",
    },
  },
  "codonNonsynonymous": "#e8930c",
  "codonStop": "#cc2222",
  "codonSynonymous": "#3a7bd5",
  "common": {
    "black": "#000",
    "white": "#fff",
  },
  "coverage": "#bdbdbd",
  "deletion": "#808080",
  "divider": "rgba(0, 0, 0, 0.12)",
  "error": {
    "contrastText": "#fff",
    "dark": "#c62828",
    "light": "#ef5350",
    "main": "#d32f2f",
  },
  "featureConnector": "rgba(0, 0, 0, 0.6)",
  "featureDescription": "blue",
  "featureHover": "rgba(0,0,0,0.15)",
  "featureHoverStrong": "rgba(0,0,0,0.4)",
  "featureSelected": "rgba(0,100,255,0.8)",
  "frames": [
    null,
    {
      "contrastText": "#fff",
      "dark": "rgb(100, 100, 100)",
      "light": "rgb(165, 165, 165)",
      "main": "#8f8f8f",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(121, 121, 121)",
      "light": "rgb(189, 189, 189)",
      "main": "#adadad",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(151, 151, 151)",
      "light": "rgb(223, 223, 223)",
      "main": "#d8d8d8",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(151, 151, 151)",
      "light": "rgb(223, 223, 223)",
      "main": "#d8d8d8",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(121, 121, 121)",
      "light": "rgb(189, 189, 189)",
      "main": "#adadad",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(100, 100, 100)",
      "light": "rgb(165, 165, 165)",
      "main": "#8f8f8f",
    },
  ],
  "framesCDS": [
    null,
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(178, 89, 89)",
      "light": "rgb(255, 153, 153)",
      "main": "#FF8080",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(89, 178, 89)",
      "light": "rgb(153, 255, 153)",
      "main": "#80FF80",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(89, 89, 178)",
      "light": "rgb(153, 153, 255)",
      "main": "#8080FF",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(89, 89, 178)",
      "light": "rgb(153, 153, 255)",
      "main": "#8080FF",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(89, 178, 89)",
      "light": "rgb(153, 255, 153)",
      "main": "#80FF80",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(178, 89, 89)",
      "light": "rgb(255, 153, 153)",
      "main": "#FF8080",
    },
  ],
  "grey": {
    "100": "#f5f5f5",
    "200": "#eeeeee",
    "300": "#e0e0e0",
    "400": "#bdbdbd",
    "50": "#fafafa",
    "500": "#9e9e9e",
    "600": "#757575",
    "700": "#616161",
    "800": "#424242",
    "900": "#212121",
  },
  "gridlineMajor": "rgba(0,0,0,0.26)",
  "gridlineMinor": "rgba(0,0,0,0.12)",
  "hardclip": "#f00",
  "highlight": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 123, 20)",
    "light": "rgb(255, 192, 74)",
    "main": "#FFB11D",
  },
  "info": {
    "contrastText": "#fff",
    "dark": "#01579b",
    "light": "#03a9f4",
    "main": "#0288d1",
  },
  "insertion": "#800080",
  "mafGap": "#808080",
  "missingData": "#ffffcc",
  "mode": "light",
  "modificationFwd": "#c8c8c8",
  "modificationRev": "#c8dcc8",
  "mutedSnpBase": "#888",
  "plotGridlineMajor": "rgba(0,0,0,0.13)",
  "plotGridlineMinor": "rgba(0,0,0,0.06)",
  "primary": {
    "contrastText": "#fff",
    "dark": "rgb(23, 23, 23)",
    "light": "rgb(77, 77, 77)",
    "main": "#212121",
  },
  "quaternary": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 123, 20)",
    "light": "rgb(255, 192, 74)",
    "main": "#FFB11D",
  },
  "readOverlap": "#555555",
  "regionBoundary": "rgba(0,0,0,0.42)",
  "regionSeparator": "#757575",
  "secondary": {
    "contrastText": "#fff",
    "dark": "rgb(46, 46, 46)",
    "light": "rgb(103, 103, 103)",
    "main": "#424242",
  },
  "skip": "#009a8a",
  "softclip": "#00f",
  "startCodon": "#3e3",
  "stopCodon": "#e22",
  "success": {
    "contrastText": "#fff",
    "dark": "#1b5e20",
    "light": "#4caf50",
    "main": "#2e7d32",
  },
  "tableBorder": "#e0e0e0",
  "tertiary": {
    "contrastText": "#fff",
    "dark": "rgb(23, 23, 23)",
    "light": "rgb(77, 77, 77)",
    "main": "#212121",
  },
  "text": {
    "disabled": "rgba(0, 0, 0, 0.38)",
    "primary": "rgba(0, 0, 0, 0.87)",
    "secondary": "rgba(0, 0, 0, 0.6)",
  },
  "textHighlight": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 156, 71)",
    "light": "rgb(255, 230, 132)",
    "main": "#ffe066",
  },
  "warning": {
    "contrastText": "#fff",
    "dark": "#e65100",
    "light": "#ff9800",
    "main": "#ed6c02",
  },
}
`;

exports[`lightStock builds the same chrome 1`] = `
{
  "appBarColorOnDark": true,
  "mode": "light",
  "primary": "#0D233F",
}
`;

exports[`lightStock resolves the same colours 1`] = `
{
  "action": {
    "activatedOpacity": 0.12,
    "active": "rgba(0, 0, 0, 0.54)",
    "disabled": "rgba(0, 0, 0, 0.26)",
    "disabledBackground": "rgba(0, 0, 0, 0.12)",
    "disabledOpacity": 0.38,
    "focus": "rgba(0, 0, 0, 0.12)",
    "focusOpacity": 0.12,
    "hover": "rgba(0, 0, 0, 0.04)",
    "hoverOpacity": 0.04,
    "selected": "rgba(0, 0, 0, 0.08)",
    "selectedOpacity": 0.08,
  },
  "alignmentFill": {
    "pairLL": "#4d9a4d",
    "pairLR": "#d3d3d3",
    "pairRL": "#0099bb",
    "pairRR": "#5555bb",
    "unmappedMate": "#000000",
  },
  "background": {
    "default": "#fff",
    "paper": "#fff",
  },
  "bases": {
    "A": {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "#388e3c",
      "light": "#81c784",
      "main": "#4caf50",
    },
    "C": {
      "contrastText": "#fff",
      "dark": "#1976d2",
      "light": "#64b5f6",
      "main": "#2196f3",
    },
    "G": {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "#f57c00",
      "light": "#ffb74d",
      "main": "#ff9800",
    },
    "N": {
      "contrastText": "#fff",
      "dark": "#5d4037",
      "light": "#a1887f",
      "main": "#795548",
    },
    "T": {
      "contrastText": "#fff",
      "dark": "#d32f2f",
      "light": "#e57373",
      "main": "#f44336",
    },
  },
  "codonNonsynonymous": "#e8930c",
  "codonStop": "#cc2222",
  "codonSynonymous": "#3a7bd5",
  "common": {
    "black": "#000",
    "white": "#fff",
  },
  "coverage": "#bdbdbd",
  "deletion": "#808080",
  "divider": "rgba(0, 0, 0, 0.12)",
  "error": {
    "contrastText": "#fff",
    "dark": "#c62828",
    "light": "#ef5350",
    "main": "#d32f2f",
  },
  "featureConnector": "rgba(0, 0, 0, 0.6)",
  "featureDescription": "blue",
  "featureHover": "rgba(0,0,0,0.15)",
  "featureHoverStrong": "rgba(0,0,0,0.4)",
  "featureSelected": "rgba(0,100,255,0.8)",
  "frames": [
    null,
    {
      "contrastText": "#fff",
      "dark": "rgb(100, 100, 100)",
      "light": "rgb(165, 165, 165)",
      "main": "#8f8f8f",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(121, 121, 121)",
      "light": "rgb(189, 189, 189)",
      "main": "#adadad",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(151, 151, 151)",
      "light": "rgb(223, 223, 223)",
      "main": "#d8d8d8",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(151, 151, 151)",
      "light": "rgb(223, 223, 223)",
      "main": "#d8d8d8",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(121, 121, 121)",
      "light": "rgb(189, 189, 189)",
      "main": "#adadad",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(100, 100, 100)",
      "light": "rgb(165, 165, 165)",
      "main": "#8f8f8f",
    },
  ],
  "framesCDS": [
    null,
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(178, 89, 89)",
      "light": "rgb(255, 153, 153)",
      "main": "#FF8080",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(89, 178, 89)",
      "light": "rgb(153, 255, 153)",
      "main": "#80FF80",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(89, 89, 178)",
      "light": "rgb(153, 153, 255)",
      "main": "#8080FF",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(89, 89, 178)",
      "light": "rgb(153, 153, 255)",
      "main": "#8080FF",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(89, 178, 89)",
      "light": "rgb(153, 255, 153)",
      "main": "#80FF80",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(178, 89, 89)",
      "light": "rgb(255, 153, 153)",
      "main": "#FF8080",
    },
  ],
  "grey": {
    "100": "#f5f5f5",
    "200": "#eeeeee",
    "300": "#e0e0e0",
    "400": "#bdbdbd",
    "50": "#fafafa",
    "500": "#9e9e9e",
    "600": "#757575",
    "700": "#616161",
    "800": "#424242",
    "900": "#212121",
  },
  "gridlineMajor": "rgba(0,0,0,0.26)",
  "gridlineMinor": "rgba(0,0,0,0.12)",
  "hardclip": "#f00",
  "highlight": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 123, 20)",
    "light": "rgb(255, 192, 74)",
    "main": "#FFB11D",
  },
  "info": {
    "contrastText": "#fff",
    "dark": "#01579b",
    "light": "#03a9f4",
    "main": "#0288d1",
  },
  "insertion": "#800080",
  "mafGap": "#808080",
  "missingData": "#ffffcc",
  "mode": "light",
  "modificationFwd": "#c8c8c8",
  "modificationRev": "#c8dcc8",
  "mutedSnpBase": "#888",
  "plotGridlineMajor": "rgba(0,0,0,0.13)",
  "plotGridlineMinor": "rgba(0,0,0,0.06)",
  "primary": {
    "contrastText": "#fff",
    "dark": "rgb(9, 24, 44)",
    "light": "rgb(61, 79, 101)",
    "main": "#0D233F",
  },
  "quaternary": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 123, 20)",
    "light": "rgb(255, 192, 74)",
    "main": "#FFB11D",
  },
  "readOverlap": "#555555",
  "regionBoundary": "rgba(0,0,0,0.42)",
  "regionSeparator": "#757575",
  "secondary": {
    "contrastText": "#fff",
    "dark": "rgb(79, 21, 69)",
    "light": "rgb(142, 75, 130)",
    "main": "#721E63",
  },
  "skip": "#009a8a",
  "softclip": "#00f",
  "startCodon": "#3e3",
  "stopCodon": "#e22",
  "success": {
    "contrastText": "#fff",
    "dark": "#1b5e20",
    "light": "#4caf50",
    "main": "#2e7d32",
  },
  "tableBorder": "#e0e0e0",
  "tertiary": {
    "contrastText": "#fff",
    "dark": "rgb(13, 59, 67)",
    "light": "rgb(66, 119, 127)",
    "main": "#135560",
  },
  "text": {
    "disabled": "rgba(0, 0, 0, 0.38)",
    "primary": "rgba(0, 0, 0, 0.87)",
    "secondary": "rgba(0, 0, 0, 0.6)",
  },
  "textHighlight": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 156, 71)",
    "light": "rgb(255, 230, 132)",
    "main": "#ffe066",
  },
  "warning": {
    "contrastText": "#fff",
    "dark": "#e65100",
    "light": "#ff9800",
    "main": "#ed6c02",
  },
}
`;

exports[`minimal builds the same chrome 1`] = `
{
  "appBarColorOnDark": true,
  "mode": "light",
  "primary": "#212121",
}
`;

exports[`minimal resolves the same colours 1`] = `
{
  "action": {
    "activatedOpacity": 0.12,
    "active": "rgba(0, 0, 0, 0.54)",
    "disabled": "rgba(0, 0, 0, 0.26)",
    "disabledBackground": "rgba(0, 0, 0, 0.12)",
    "disabledOpacity": 0.38,
    "focus": "rgba(0, 0, 0, 0.12)",
    "focusOpacity": 0.12,
    "hover": "rgba(0, 0, 0, 0.04)",
    "hoverOpacity": 0.04,
    "selected": "rgba(0, 0, 0, 0.08)",
    "selectedOpacity": 0.08,
  },
  "alignmentFill": {
    "pairLL": "#4d9a4d",
    "pairLR": "#d3d3d3",
    "pairRL": "#0099bb",
    "pairRR": "#5555bb",
    "unmappedMate": "#000000",
  },
  "background": {
    "default": "#fff",
    "paper": "#fff",
  },
  "bases": {
    "A": {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "#388e3c",
      "light": "#81c784",
      "main": "#4caf50",
    },
    "C": {
      "contrastText": "#fff",
      "dark": "#1976d2",
      "light": "#64b5f6",
      "main": "#2196f3",
    },
    "G": {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "#f57c00",
      "light": "#ffb74d",
      "main": "#ff9800",
    },
    "N": {
      "contrastText": "#fff",
      "dark": "#5d4037",
      "light": "#a1887f",
      "main": "#795548",
    },
    "T": {
      "contrastText": "#fff",
      "dark": "#d32f2f",
      "light": "#e57373",
      "main": "#f44336",
    },
  },
  "codonNonsynonymous": "#e8930c",
  "codonStop": "#cc2222",
  "codonSynonymous": "#3a7bd5",
  "common": {
    "black": "#000",
    "white": "#fff",
  },
  "coverage": "#bdbdbd",
  "deletion": "#808080",
  "divider": "rgba(0, 0, 0, 0.12)",
  "error": {
    "contrastText": "#fff",
    "dark": "#c62828",
    "light": "#ef5350",
    "main": "#d32f2f",
  },
  "featureConnector": "rgba(0, 0, 0, 0.6)",
  "featureDescription": "blue",
  "featureHover": "rgba(0,0,0,0.15)",
  "featureHoverStrong": "rgba(0,0,0,0.4)",
  "featureSelected": "rgba(0,100,255,0.8)",
  "frames": [
    null,
    {
      "contrastText": "#fff",
      "dark": "rgb(100, 100, 100)",
      "light": "rgb(165, 165, 165)",
      "main": "#8f8f8f",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(121, 121, 121)",
      "light": "rgb(189, 189, 189)",
      "main": "#adadad",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(151, 151, 151)",
      "light": "rgb(223, 223, 223)",
      "main": "#d8d8d8",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(151, 151, 151)",
      "light": "rgb(223, 223, 223)",
      "main": "#d8d8d8",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(121, 121, 121)",
      "light": "rgb(189, 189, 189)",
      "main": "#adadad",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(100, 100, 100)",
      "light": "rgb(165, 165, 165)",
      "main": "#8f8f8f",
    },
  ],
  "framesCDS": [
    null,
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(178, 89, 89)",
      "light": "rgb(255, 153, 153)",
      "main": "#FF8080",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(89, 178, 89)",
      "light": "rgb(153, 255, 153)",
      "main": "#80FF80",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(89, 89, 178)",
      "light": "rgb(153, 153, 255)",
      "main": "#8080FF",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(89, 89, 178)",
      "light": "rgb(153, 153, 255)",
      "main": "#8080FF",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(89, 178, 89)",
      "light": "rgb(153, 255, 153)",
      "main": "#80FF80",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(178, 89, 89)",
      "light": "rgb(255, 153, 153)",
      "main": "#FF8080",
    },
  ],
  "grey": {
    "100": "#f5f5f5",
    "200": "#eeeeee",
    "300": "#e0e0e0",
    "400": "#bdbdbd",
    "50": "#fafafa",
    "500": "#9e9e9e",
    "600": "#757575",
    "700": "#616161",
    "800": "#424242",
    "900": "#212121",
  },
  "gridlineMajor": "rgba(0,0,0,0.26)",
  "gridlineMinor": "rgba(0,0,0,0.12)",
  "hardclip": "#f00",
  "highlight": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 123, 20)",
    "light": "rgb(255, 192, 74)",
    "main": "#FFB11D",
  },
  "info": {
    "contrastText": "#fff",
    "dark": "#01579b",
    "light": "#03a9f4",
    "main": "#0288d1",
  },
  "insertion": "#800080",
  "mafGap": "#808080",
  "missingData": "#ffffcc",
  "mode": "light",
  "modificationFwd": "#c8c8c8",
  "modificationRev": "#c8dcc8",
  "mutedSnpBase": "#888",
  "plotGridlineMajor": "rgba(0,0,0,0.13)",
  "plotGridlineMinor": "rgba(0,0,0,0.06)",
  "primary": {
    "contrastText": "#fff",
    "dark": "rgb(23, 23, 23)",
    "light": "rgb(77, 77, 77)",
    "main": "#212121",
  },
  "quaternary": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 123, 20)",
    "light": "rgb(255, 192, 74)",
    "main": "#FFB11D",
  },
  "readOverlap": "#555555",
  "regionBoundary": "rgba(0,0,0,0.42)",
  "regionSeparator": "#757575",
  "secondary": {
    "contrastText": "#fff",
    "dark": "rgb(46, 46, 46)",
    "light": "rgb(103, 103, 103)",
    "main": "#424242",
  },
  "skip": "#009a8a",
  "softclip": "#00f",
  "startCodon": "#3e3",
  "stopCodon": "#e22",
  "success": {
    "contrastText": "#fff",
    "dark": "#1b5e20",
    "light": "#4caf50",
    "main": "#2e7d32",
  },
  "tableBorder": "#e0e0e0",
  "tertiary": {
    "contrastText": "#fff",
    "dark": "rgb(23, 23, 23)",
    "light": "rgb(77, 77, 77)",
    "main": "#212121",
  },
  "text": {
    "disabled": "rgba(0, 0, 0, 0.38)",
    "primary": "rgba(0, 0, 0, 0.87)",
    "secondary": "rgba(0, 0, 0, 0.6)",
  },
  "textHighlight": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 156, 71)",
    "light": "rgb(255, 230, 132)",
    "main": "#ffe066",
  },
  "warning": {
    "contrastText": "#fff",
    "dark": "#e65100",
    "light": "#ff9800",
    "main": "#ed6c02",
  },
}
`;

exports[`stock builds the same chrome 1`] = `
{
  "appBarColorOnDark": true,
  "mode": "light",
  "primary": "#0D233F",
}
`;

exports[`stock resolves the same colours 1`] = `
{
  "action": {
    "activatedOpacity": 0.12,
    "active": "rgba(0, 0, 0, 0.54)",
    "disabled": "rgba(0, 0, 0, 0.26)",
    "disabledBackground": "rgba(0, 0, 0, 0.12)",
    "disabledOpacity": 0.38,
    "focus": "rgba(0, 0, 0, 0.12)",
    "focusOpacity": 0.12,
    "hover": "rgba(0, 0, 0, 0.04)",
    "hoverOpacity": 0.04,
    "selected": "rgba(0, 0, 0, 0.08)",
    "selectedOpacity": 0.08,
  },
  "alignmentFill": {
    "pairLL": "#4d9a4d",
    "pairLR": "#d3d3d3",
    "pairRL": "#0099bb",
    "pairRR": "#5555bb",
    "unmappedMate": "#000000",
  },
  "background": {
    "default": "#fff",
    "paper": "#fff",
  },
  "bases": {
    "A": {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "#388e3c",
      "light": "#81c784",
      "main": "#4caf50",
    },
    "C": {
      "contrastText": "#fff",
      "dark": "#1976d2",
      "light": "#64b5f6",
      "main": "#2196f3",
    },
    "G": {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "#f57c00",
      "light": "#ffb74d",
      "main": "#ff9800",
    },
    "N": {
      "contrastText": "#fff",
      "dark": "#5d4037",
      "light": "#a1887f",
      "main": "#795548",
    },
    "T": {
      "contrastText": "#fff",
      "dark": "#d32f2f",
      "light": "#e57373",
      "main": "#f44336",
    },
  },
  "codonNonsynonymous": "#e8930c",
  "codonStop": "#cc2222",
  "codonSynonymous": "#3a7bd5",
  "common": {
    "black": "#000",
    "white": "#fff",
  },
  "coverage": "#bdbdbd",
  "deletion": "#808080",
  "divider": "rgba(0, 0, 0, 0.12)",
  "error": {
    "contrastText": "#fff",
    "dark": "#c62828",
    "light": "#ef5350",
    "main": "#d32f2f",
  },
  "featureConnector": "rgba(0, 0, 0, 0.6)",
  "featureDescription": "blue",
  "featureHover": "rgba(0,0,0,0.15)",
  "featureHoverStrong": "rgba(0,0,0,0.4)",
  "featureSelected": "rgba(0,100,255,0.8)",
  "frames": [
    null,
    {
      "contrastText": "#fff",
      "dark": "rgb(100, 100, 100)",
      "light": "rgb(165, 165, 165)",
      "main": "#8f8f8f",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(121, 121, 121)",
      "light": "rgb(189, 189, 189)",
      "main": "#adadad",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(151, 151, 151)",
      "light": "rgb(223, 223, 223)",
      "main": "#d8d8d8",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(151, 151, 151)",
      "light": "rgb(223, 223, 223)",
      "main": "#d8d8d8",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(121, 121, 121)",
      "light": "rgb(189, 189, 189)",
      "main": "#adadad",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(100, 100, 100)",
      "light": "rgb(165, 165, 165)",
      "main": "#8f8f8f",
    },
  ],
  "framesCDS": [
    null,
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(178, 89, 89)",
      "light": "rgb(255, 153, 153)",
      "main": "#FF8080",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(89, 178, 89)",
      "light": "rgb(153, 255, 153)",
      "main": "#80FF80",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(89, 89, 178)",
      "light": "rgb(153, 153, 255)",
      "main": "#8080FF",
    },
    {
      "contrastText": "#fff",
      "dark": "rgb(89, 89, 178)",
      "light": "rgb(153, 153, 255)",
      "main": "#8080FF",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(89, 178, 89)",
      "light": "rgb(153, 255, 153)",
      "main": "#80FF80",
    },
    {
      "contrastText": "rgba(0, 0, 0, 0.87)",
      "dark": "rgb(178, 89, 89)",
      "light": "rgb(255, 153, 153)",
      "main": "#FF8080",
    },
  ],
  "grey": {
    "100": "#f5f5f5",
    "200": "#eeeeee",
    "300": "#e0e0e0",
    "400": "#bdbdbd",
    "50": "#fafafa",
    "500": "#9e9e9e",
    "600": "#757575",
    "700": "#616161",
    "800": "#424242",
    "900": "#212121",
  },
  "gridlineMajor": "rgba(0,0,0,0.26)",
  "gridlineMinor": "rgba(0,0,0,0.12)",
  "hardclip": "#f00",
  "highlight": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 123, 20)",
    "light": "rgb(255, 192, 74)",
    "main": "#FFB11D",
  },
  "info": {
    "contrastText": "#fff",
    "dark": "#01579b",
    "light": "#03a9f4",
    "main": "#0288d1",
  },
  "insertion": "#800080",
  "mafGap": "#808080",
  "missingData": "#ffffcc",
  "mode": "light",
  "modificationFwd": "#c8c8c8",
  "modificationRev": "#c8dcc8",
  "mutedSnpBase": "#888",
  "plotGridlineMajor": "rgba(0,0,0,0.13)",
  "plotGridlineMinor": "rgba(0,0,0,0.06)",
  "primary": {
    "contrastText": "#fff",
    "dark": "rgb(9, 24, 44)",
    "light": "rgb(61, 79, 101)",
    "main": "#0D233F",
  },
  "quaternary": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 123, 20)",
    "light": "rgb(255, 192, 74)",
    "main": "#FFB11D",
  },
  "readOverlap": "#555555",
  "regionBoundary": "rgba(0,0,0,0.42)",
  "regionSeparator": "#757575",
  "secondary": {
    "contrastText": "#fff",
    "dark": "rgb(79, 21, 69)",
    "light": "rgb(142, 75, 130)",
    "main": "#721E63",
  },
  "skip": "#009a8a",
  "softclip": "#00f",
  "startCodon": "#3e3",
  "stopCodon": "#e22",
  "success": {
    "contrastText": "#fff",
    "dark": "#1b5e20",
    "light": "#4caf50",
    "main": "#2e7d32",
  },
  "tableBorder": "#e0e0e0",
  "tertiary": {
    "contrastText": "#fff",
    "dark": "rgb(13, 59, 67)",
    "light": "rgb(66, 119, 127)",
    "main": "#135560",
  },
  "text": {
    "disabled": "rgba(0, 0, 0, 0.38)",
    "primary": "rgba(0, 0, 0, 0.87)",
    "secondary": "rgba(0, 0, 0, 0.6)",
  },
  "textHighlight": {
    "contrastText": "rgba(0, 0, 0, 0.87)",
    "dark": "rgb(178, 156, 71)",
    "light": "rgb(255, 230, 132)",
    "main": "#ffe066",
  },
  "warning": {
    "contrastText": "#fff",
    "dark": "#e65100",
    "light": "#ff9800",
    "main": "#ed6c02",
  },
}
`;
